# etrs89-to-wgs84

./: .gitignore  README.md  etrs89_to_itrs.py  etrs89_to_wgs84.py  itrf2014_to_etrf2014.py  pyproject.toml  stereo70_to_etrs89.py  utils.py  wgs84_to_etrs89.py
data/convert_my/403/179169/9069/229896/: 229896.shp  229896.shx
data/convert_pyproj/403/179169/7789/229896/: 229896.dbf  229896.geojson  229896.shp  229896.shx
data/convert_pyproj/403/179169/7930/229896/: 229896.geojson
data/convert_pyproj/403/179169/9000/229896/: 229896.shp  229896.shx
data/convert_pyproj/403/179169/9988/229896/: 229896.dbf  229896.shp  229896.shx
data/convert_pyproj/403/179169/9990/229896/: 229896.shp  229896.shx
data/convert_pyproj/403/tei/7789/bucu00rou/: bucu00rou.geojson
data/convert_pyproj/403/tei/8401/bucu00rou/: bucu00rou.geojson
data/convert_pyproj/403/tei/9988/bucu00rou/: bucu00rou.dbf  bucu00rou.geojson  bucu00rou.shp  bucu00rou.shx
data/convert_pyproj/403/tei/9990/bucu00rou/: bucu00rou.shp  bucu00rou.shx
data/convert_transdatro/403/179169/7931/229896/: 229896.geojson  229896.shp  229896.shx
data/convert_transdatro/403/179169/8403/229896/: 229896.dbf  229896.prj  229896.shp
data/convert_transdatro/403/179169/9000/229896/: 229896.shx
data/from_ANCPI/403/179169/3844/: 229896.json
data/from_euref/403/tei/7930/: bucu00rou_ancpi.geojson
data/from_euref/403/tei/8401/: bucu00rou.geojson
data/projinfo_outputs/: etrf2000_to_g2139.md
docs_gemini_statements/: about_angular_velocities.md  about_etrs89_realizations.md  central_epoch.md
